--- a/frontend/src/components/layout/NavVariantPicker.module.scss
+++ b/frontend/src/components/layout/NavVariantPicker.module.scss
@@ -2,7 +2,7 @@
 
 .picker {
   position: fixed;
-  bottom: 16px;
+  bottom: 80px;
   right: 16px;
   z-index: 999;
   display: flex;
